--- a/web/mystyle.css
+++ b/web/mystyle.css
@@ -49,6 +49,14 @@ h1 {
     font-size: small;
 }
 
+#toggleMusic {
+    display: block;
+    position: absolute;
+    top: auto;
+    bottom: auto;
+    left: 10px;
+}
+
 canvas {
     background: rgba(128, 128, 128, 0);
     outline: 1px solid white;
